# SoftwareGL

./: .gitignore  CMakeLists.txt  README.md  SoftwareGL.sln  SoftwareGL.vcxproj
asset/: Texture.tga  fragment.glsl  vertex.glsl
example/: WindowSoftwareGL.cpp  WindowSoftwareGL.h  main.cpp
gl_shader/: Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  WindowInterface.h  WindowSDL2GL.cpp  WindowSDL2GL.h  WindowSoftwareGL.cpp  WindowSoftwareGL.h  main.cpp
imgui/: imgui_impl_opengl3.cpp
open_gl/: Buffer.cpp  Buffer.h  Device.cpp  Device.h  Mesh.cpp  Mesh.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
open_gl_test/: Buffer_test.cpp  Buffer_test.h  Device_test.cpp  Device_test.h  Mesh_test.cpp  Mesh_test.h  OpenGL_test.h  Program_test.h  main.cpp
software/: WindowInterface.h  WindowSDL2GL.cpp  WindowSoftwareGL.cpp  WindowSoftwareGL.h  main.cpp
software_gl/: Camera.cpp  Camera.h  Image.cpp  Image.h  ImageInterface.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h  VectorMath.cpp  VectorMath.h  Vertex.h  WindowInterface.h  WindowSDL2GL.cpp  WindowSDL2GL.h  image_interface.h
software_gl_test/: Mesh_test.cpp  Mesh_test.h  Scene_test.cpp  Scene_test.h  main.cpp
